--- a/index.html
+++ b/index.html
@@ -35,79 +35,23 @@
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="md/基础知识/01/index.html"><a href="md/基础知识/01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="md/基础知识/01/习题.html"><a href="md/基础知识/01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="md/基础知识/02/index.html"><a href="md/基础知识/02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="md/基础知识/02/01.html"><a href="md/基础知识/02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="md/基础知识/02/02.html"><a href="md/基础知识/02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="md/基础知识/02/03.html"><a href="md/基础知识/02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="md/基础知识/02/04.html"><a href="md/基础知识/02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="md/基础知识/02/习题.html"><a href="md/基础知识/02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.3" data-path="md/基础知识/03/index.html"><a href="md/基础知识/03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.3.1" data-path="md/基础知识/03/01.html"><a href="md/基础知识/03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
-<li class="chapter" data-level="2.3.2" data-path="md/基础知识/03/02.html"><a href="md/基础知识/03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
-<li class="chapter" data-level="2.3.3" data-path="md/基础知识/03/03.html"><a href="md/基础知识/03/03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="md/基础知识/04/index.html"><a href="md/基础知识/04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="md/基础知识/04/01.html"><a href="md/基础知识/04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="md/基础知识/04/02.html"><a href="md/基础知识/04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="md/基础知识/04/03.html"><a href="md/基础知识/04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="md/基础知识/04/04.html"><a href="md/基础知识/04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="md/基础知识/04/05.html"><a href="md/基础知识/04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter" data-level="2.4.6" data-path="md/基础知识/04/06.html"><a href="md/基础知识/04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="md/基础知识/04/07.html"><a href="md/基础知识/04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="md/基础知识/04/08.html"><a href="md/基础知识/04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
-<li class="chapter" data-level="2.5" data-path="md/基础知识/05/index.html"><a href="md/基础知识/05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.5.1" data-path="md/基础知识/05/01.html"><a href="md/基础知识/05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
-<li class="chapter" data-level="2.5.2" data-path="md/基础知识/05/02.html"><a href="md/基础知识/05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
-<li class="chapter" data-level="2.6" data-path="md/基础知识/06/index.html"><a href="md/基础知识/06/index.html"><b>2.6.</b>第六章 健康教育学</a>
-<ul class="articles"><li class="chapter" data-level="2.6.1" data-path="md/基础知识/06/01.html"><a href="md/基础知识/06/01.html"><b>2.6.1.</b>第一节 健康教育与健康促进概述</a></li>
-<li class="chapter" data-level="2.6.2" data-path="md/基础知识/06/02.html"><a href="md/基础知识/06/02.html"><b>2.6.2.</b>第二节 健康相关行为改变的理论</a></li>
-<li class="chapter" data-level="2.6.3" data-path="md/基础知识/06/03.html"><a href="md/基础知识/06/03.html"><b>2.6.3.</b>第三节 健康传播</a></li>
-<li class="chapter" data-level="2.6.4" data-path="md/基础知识/06/04.html"><a href="md/基础知识/06/04.html"><b>2.6.4.</b>第四节 健康教育计划的设计、实施与评价</a></li></ul></li>
-<li class="chapter" data-level="2.7" data-path="md/基础知识/07/index.html"><a href="md/基础知识/07/index.html"><b>2.7.</b>第七章 营养与食品安全</a>
-<ul class="articles"><li class="chapter" data-level="2.7.1" data-path="md/基础知识/07/01.html"><a href="md/基础知识/07/01.html"><b>2.7.1.</b>第一节 营养学基础</a></li>
-<li class="chapter" data-level="2.7.2" data-path="md/基础知识/07/02.html"><a href="md/基础知识/07/02.html"><b>2.7.2.</b>第二节 平衡膳食</a></li>
-<li class="chapter" data-level="2.7.3" data-path="md/基础知识/07/03.html"><a href="md/基础知识/07/03.html"><b>2.7.3.</b>第三节 保健食品</a></li>
-<li class="chapter" data-level="2.7.4" data-path="md/基础知识/07/04.html"><a href="md/基础知识/07/04.html"><b>2.7.4.</b>第四节 食品安全</a></li></ul></li>
-<li class="chapter" data-level="2.8" data-path="md/基础知识/08/index.html"><a href="md/基础知识/08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.8.1" data-path="md/基础知识/08/01.html"><a href="md/基础知识/08/01.html"><b>2.8.1.</b>第一节 身体活动及其健康益处</a></li>
-<li class="chapter" data-level="2.8.2" data-path="md/基础知识/08/02.html"><a href="md/基础知识/08/02.html"><b>2.8.2.</b>第二节 现有身体活动指南要点</a></li>
-<li class="chapter" data-level="2.8.3" data-path="md/基础知识/08/03.html"><a href="md/基础知识/08/03.html"><b>2.8.3.</b>第三节 慢性病与身体活动</a></li></ul></li>
-<li class="chapter" data-level="2.9" data-path="md/基础知识/09/index.html"><a href="md/基础知识/09/index.html"><b>2.9.</b>第九章 心理健康</a>
-<ul class="articles"><li class="chapter" data-level="2.9.1" data-path="md/基础知识/09/01.html"><a href="md/基础知识/09/01.html"><b>2.9.1.</b>第一节 心理健康与心理卫生</a></li>
-<li class="chapter" data-level="2.9.2" data-path="md/基础知识/09/02.html"><a href="md/基础知识/09/02.html"><b>2.9.2.</b>第二节 心理健康与心理发展</a></li>
-<li class="chapter" data-level="2.9.3" data-path="md/基础知识/09/03.html"><a href="md/基础知识/09/03.html"><b>2.9.3.</b>第三节 常见心理行为问题</a></li>
-<li class="chapter" data-level="2.9.4" data-path="md/基础知识/09/04.html"><a href="md/基础知识/09/04.html"><b>2.9.4.</b>第四节 常见心理障碍</a></li>
-<li class="chapter" data-level="2.9.5" data-path="md/基础知识/09/05.html"><a href="md/基础知识/09/05.html"><b>2.9.5.</b>第五节 心理健康的维护与促进</a></li></ul></li>
-<li class="chapter" data-level="2.10" data-path="md/基础知识/10/index.html"><a href="md/基础知识/10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.10.1" data-path="md/基础知识/10/01.html"><a href="md/基础知识/10/01.html"><b>2.10.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.10.2" data-path="md/基础知识/10/02.html"><a href="md/基础知识/10/02.html"><b>2.10.2.</b>第二节 常用养生保健方法</a></li></ul></li>
-<li class="chapter" data-level="2.11" data-path="md/基础知识/11/index.html"><a href="md/基础知识/11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.11.1" data-path="md/基础知识/11/01.html"><a href="md/基础知识/11/01.html"><b>2.11.1.</b>第一节 现代康复医学的兴起与发展</a></li>
-<li class="chapter" data-level="2.11.2" data-path="md/基础知识/11/02.html"><a href="md/基础知识/11/02.html"><b>2.11.2.</b>第二节 康复医学基本概念</a></li>
-<li class="chapter" data-level="2.11.3" data-path="md/基础知识/11/03.html"><a href="md/基础知识/11/03.html"><b>2.11.3.</b>第三节 康复医学基本内容</a></li>
-<li class="chapter" data-level="2.11.4" data-path="md/基础知识/11/04.html"><a href="md/基础知识/11/04.html"><b>2.11.4.</b>第四节 康复治疗技术</a></li></ul></li>
-<li class="chapter" data-level="2.12" data-path="md/基础知识/12/index.html"><a href="md/基础知识/12/index.html"><b>2.12.</b>第十二章 健康信息学</a>
-<ul class="articles"><li class="chapter" data-level="2.12.1" data-path="md/基础知识/12/01.html"><a href="md/基础知识/12/01.html"><b>2.12.1.</b>第一节 信息学概述</a></li>
-<li class="chapter" data-level="2.12.2" data-path="md/基础知识/12/02.html"><a href="md/基础知识/12/02.html"><b>2.12.2.</b>第二节 健康信息收集、分析与利用</a></li>
-<li class="chapter" data-level="2.12.3" data-path="md/基础知识/12/03.html"><a href="md/基础知识/12/03.html"><b>2.12.3.</b>第三节 居民健康档案概述</a></li>
-<li class="chapter" data-level="2.12.4" data-path="md/基础知识/12/04.html"><a href="md/基础知识/12/04.html"><b>2.12.4.</b>第四节 健康大数据和互联网移动医疗</a></li></ul></li>
-<li class="chapter" data-level="2.13" data-path="md/基础知识/13/index.html"><a href="md/基础知识/13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a>
-<ul class="articles"><li class="chapter" data-level="2.13.1" data-path="md/基础知识/13/01.html"><a href="md/基础知识/13/01.html"><b>2.13.1.</b>第一节 医学伦理与健康管理伦理的定义和基本原则</a></li>
-<li class="chapter" data-level="2.13.2" data-path="md/基础知识/13/02.html"><a href="md/基础知识/13/02.html"><b>2.13.2.</b>第二节 健康管理伦理规范及权力、义务</a></li>
-<li class="chapter" data-level="2.13.3" data-path="md/基础知识/13/03.html"><a href="md/基础知识/13/03.html"><b>2.13.3.</b>第三节 健康管理师职业道德</a></li></ul></li>
-<li class="chapter" data-level="2.14" data-path="md/基础知识/14/index.html"><a href="md/基础知识/14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a>
-<ul class="articles"><li class="chapter" data-level="2.14.1" data-path="md/基础知识/14/01.html"><a href="md/基础知识/14/01.html"><b>2.14.1.</b>第一节 健康保险概述</a></li>
-<li class="chapter" data-level="2.14.2" data-path="md/基础知识/14/02.html"><a href="md/基础知识/14/02.html"><b>2.14.2.</b>第二节 健康管理在健康保险中的应用</a></li></ul></li>
-<li class="chapter" data-level="2.15" data-path="md/基础知识/15/index.html"><a href="md/基础知识/15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a>
-<ul class="articles"><li class="chapter" data-level="2.15.1" data-path="md/基础知识/15/01.html"><a href="md/基础知识/15/01.html"><b>2.15.1.</b>第一节 健康管理服务概述</a></li>
-<li class="chapter" data-level="2.15.2" data-path="md/基础知识/15/02.html"><a href="md/基础知识/15/02.html"><b>2.15.2.</b>第二节 健康管理服务的消费行为分析</a></li>
-<li class="chapter" data-level="2.15.3" data-path="md/基础知识/15/03.html"><a href="md/基础知识/15/03.html"><b>2.15.3.</b>第三节 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.15.4" data-path="md/基础知识/15/04.html"><a href="md/基础知识/15/04.html"><b>2.15.4.</b>第四节 健康管理相关产品</a></li>
-<li class="chapter" data-level="2.15.5" data-path="md/基础知识/15/05.html"><a href="md/基础知识/15/05.html"><b>2.15.5.</b>第五节 健康管理服务案例</a></li></ul></li>
-<li class="chapter" data-level="2.16" data-path="md/基础知识/16/index.html"><a href="md/基础知识/16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a>
-<ul class="articles"><li class="chapter" data-level="2.16.1" data-path="md/基础知识/16/01.html"><a href="md/基础知识/16/01.html"><b>2.16.1.</b>第一节 《中华人民共和国劳动合同法》相关知识</a></li>
-<li class="chapter" data-level="2.16.2" data-path="md/基础知识/16/02.html"><a href="md/基础知识/16/02.html"><b>2.16.2.</b>第二节 《中华人民共和国消费者权益保护法》相关知识</a></li>
-<li class="chapter" data-level="2.16.3" data-path="md/基础知识/16/03.html"><a href="md/基础知识/16/03.html"><b>2.16.3.</b>第三节 《中华人民共和国执业医师》相关知识</a></li>
-<li class="chapter" data-level="2.16.4" data-path="md/基础知识/16/04.html"><a href="md/基础知识/16/04.html"><b>2.16.4.</b>第四节 《中华人民共和国食品安全法》相关知识</a></li>
-<li class="chapter" data-level="2.16.5" data-path="md/基础知识/16/05.html"><a href="md/基础知识/16/05.html"><b>2.16.5.</b>第五节 《中华人民共和国中医药法》相关知识</a></li></ul></li></ul>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="md/基础知识/02/习题.html"><a href="md/基础知识/02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
+<li class="chapter" data-level="2.3" data-path="md/基础知识/03/index.html"><a href="md/基础知识/03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="md/基础知识/04/index.html"><a href="md/基础知识/04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="md/基础知识/05/index.html"><a href="md/基础知识/05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="md/基础知识/06/index.html"><a href="md/基础知识/06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="md/基础知识/07/index.html"><a href="md/基础知识/07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="md/基础知识/08/index.html"><a href="md/基础知识/08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="md/基础知识/09/index.html"><a href="md/基础知识/09/index.html"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="md/基础知识/10/index.html"><a href="md/基础知识/10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="md/基础知识/11/index.html"><a href="md/基础知识/11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter" data-level="2.12" data-path="md/基础知识/12/index.html"><a href="md/基础知识/12/index.html"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="md/基础知识/13/index.html"><a href="md/基础知识/13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="md/基础知识/14/index.html"><a href="md/基础知识/14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter" data-level="2.15" data-path="md/基础知识/15/index.html"><a href="md/基础知识/15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter" data-level="2.16" data-path="md/基础知识/16/index.html"><a href="md/基础知识/16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<li class="header">专业技能</li>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="md/专业技能/01/index.html"><a href="md/专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
 <li class="header">国家职业资格三级</li>
             <li class="divider"></li>
             <li>
