--- a/md/基础知识/03/index.html
+++ b/md/基础知识/03/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="01.html" rel="next"/>
+<link href="../04/index.html" rel="next"/>
 </head>
 <body>
 <div class="book match-braces"><div class="book-summary">
@@ -35,79 +35,23 @@
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="../01/index.html"><a href="../01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
-<li class="chapter active" data-level="2.3" data-path="index.html"><a href="index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.3.1" data-path="01.html"><a href="01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
-<li class="chapter" data-level="2.3.2" data-path="02.html"><a href="02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
-<li class="chapter" data-level="2.3.3" data-path="03.html"><a href="03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="../04/01.html"><a href="../04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="../04/02.html"><a href="../04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="../04/03.html"><a href="../04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="../04/04.html"><a href="../04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="../04/05.html"><a href="../04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter" data-level="2.4.6" data-path="../04/06.html"><a href="../04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="../04/07.html"><a href="../04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="../04/08.html"><a href="../04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
-<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.5.1" data-path="../05/01.html"><a href="../05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
-<li class="chapter" data-level="2.5.2" data-path="../05/02.html"><a href="../05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
-<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a>
-<ul class="articles"><li class="chapter" data-level="2.6.1" data-path="../06/01.html"><a href="../06/01.html"><b>2.6.1.</b>第一节 健康教育与健康促进概述</a></li>
-<li class="chapter" data-level="2.6.2" data-path="../06/02.html"><a href="../06/02.html"><b>2.6.2.</b>第二节 健康相关行为改变的理论</a></li>
-<li class="chapter" data-level="2.6.3" data-path="../06/03.html"><a href="../06/03.html"><b>2.6.3.</b>第三节 健康传播</a></li>
-<li class="chapter" data-level="2.6.4" data-path="../06/04.html"><a href="../06/04.html"><b>2.6.4.</b>第四节 健康教育计划的设计、实施与评价</a></li></ul></li>
-<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a>
-<ul class="articles"><li class="chapter" data-level="2.7.1" data-path="../07/01.html"><a href="../07/01.html"><b>2.7.1.</b>第一节 营养学基础</a></li>
-<li class="chapter" data-level="2.7.2" data-path="../07/02.html"><a href="../07/02.html"><b>2.7.2.</b>第二节 平衡膳食</a></li>
-<li class="chapter" data-level="2.7.3" data-path="../07/03.html"><a href="../07/03.html"><b>2.7.3.</b>第三节 保健食品</a></li>
-<li class="chapter" data-level="2.7.4" data-path="../07/04.html"><a href="../07/04.html"><b>2.7.4.</b>第四节 食品安全</a></li></ul></li>
-<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.8.1" data-path="../08/01.html"><a href="../08/01.html"><b>2.8.1.</b>第一节 身体活动及其健康益处</a></li>
-<li class="chapter" data-level="2.8.2" data-path="../08/02.html"><a href="../08/02.html"><b>2.8.2.</b>第二节 现有身体活动指南要点</a></li>
-<li class="chapter" data-level="2.8.3" data-path="../08/03.html"><a href="../08/03.html"><b>2.8.3.</b>第三节 慢性病与身体活动</a></li></ul></li>
-<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a>
-<ul class="articles"><li class="chapter" data-level="2.9.1" data-path="../09/01.html"><a href="../09/01.html"><b>2.9.1.</b>第一节 心理健康与心理卫生</a></li>
-<li class="chapter" data-level="2.9.2" data-path="../09/02.html"><a href="../09/02.html"><b>2.9.2.</b>第二节 心理健康与心理发展</a></li>
-<li class="chapter" data-level="2.9.3" data-path="../09/03.html"><a href="../09/03.html"><b>2.9.3.</b>第三节 常见心理行为问题</a></li>
-<li class="chapter" data-level="2.9.4" data-path="../09/04.html"><a href="../09/04.html"><b>2.9.4.</b>第四节 常见心理障碍</a></li>
-<li class="chapter" data-level="2.9.5" data-path="../09/05.html"><a href="../09/05.html"><b>2.9.5.</b>第五节 心理健康的维护与促进</a></li></ul></li>
-<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.10.1" data-path="../10/01.html"><a href="../10/01.html"><b>2.10.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.10.2" data-path="../10/02.html"><a href="../10/02.html"><b>2.10.2.</b>第二节 常用养生保健方法</a></li></ul></li>
-<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.11.1" data-path="../11/01.html"><a href="../11/01.html"><b>2.11.1.</b>第一节 现代康复医学的兴起与发展</a></li>
-<li class="chapter" data-level="2.11.2" data-path="../11/02.html"><a href="../11/02.html"><b>2.11.2.</b>第二节 康复医学基本概念</a></li>
-<li class="chapter" data-level="2.11.3" data-path="../11/03.html"><a href="../11/03.html"><b>2.11.3.</b>第三节 康复医学基本内容</a></li>
-<li class="chapter" data-level="2.11.4" data-path="../11/04.html"><a href="../11/04.html"><b>2.11.4.</b>第四节 康复治疗技术</a></li></ul></li>
-<li class="chapter" data-level="2.12" data-path="../12/index.html"><a href="../12/index.html"><b>2.12.</b>第十二章 健康信息学</a>
-<ul class="articles"><li class="chapter" data-level="2.12.1" data-path="../12/01.html"><a href="../12/01.html"><b>2.12.1.</b>第一节 信息学概述</a></li>
-<li class="chapter" data-level="2.12.2" data-path="../12/02.html"><a href="../12/02.html"><b>2.12.2.</b>第二节 健康信息收集、分析与利用</a></li>
-<li class="chapter" data-level="2.12.3" data-path="../12/03.html"><a href="../12/03.html"><b>2.12.3.</b>第三节 居民健康档案概述</a></li>
-<li class="chapter" data-level="2.12.4" data-path="../12/04.html"><a href="../12/04.html"><b>2.12.4.</b>第四节 健康大数据和互联网移动医疗</a></li></ul></li>
-<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a>
-<ul class="articles"><li class="chapter" data-level="2.13.1" data-path="../13/01.html"><a href="../13/01.html"><b>2.13.1.</b>第一节 医学伦理与健康管理伦理的定义和基本原则</a></li>
-<li class="chapter" data-level="2.13.2" data-path="../13/02.html"><a href="../13/02.html"><b>2.13.2.</b>第二节 健康管理伦理规范及权力、义务</a></li>
-<li class="chapter" data-level="2.13.3" data-path="../13/03.html"><a href="../13/03.html"><b>2.13.3.</b>第三节 健康管理师职业道德</a></li></ul></li>
-<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a>
-<ul class="articles"><li class="chapter" data-level="2.14.1" data-path="../14/01.html"><a href="../14/01.html"><b>2.14.1.</b>第一节 健康保险概述</a></li>
-<li class="chapter" data-level="2.14.2" data-path="../14/02.html"><a href="../14/02.html"><b>2.14.2.</b>第二节 健康管理在健康保险中的应用</a></li></ul></li>
-<li class="chapter" data-level="2.15" data-path="../15/index.html"><a href="../15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a>
-<ul class="articles"><li class="chapter" data-level="2.15.1" data-path="../15/01.html"><a href="../15/01.html"><b>2.15.1.</b>第一节 健康管理服务概述</a></li>
-<li class="chapter" data-level="2.15.2" data-path="../15/02.html"><a href="../15/02.html"><b>2.15.2.</b>第二节 健康管理服务的消费行为分析</a></li>
-<li class="chapter" data-level="2.15.3" data-path="../15/03.html"><a href="../15/03.html"><b>2.15.3.</b>第三节 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.15.4" data-path="../15/04.html"><a href="../15/04.html"><b>2.15.4.</b>第四节 健康管理相关产品</a></li>
-<li class="chapter" data-level="2.15.5" data-path="../15/05.html"><a href="../15/05.html"><b>2.15.5.</b>第五节 健康管理服务案例</a></li></ul></li>
-<li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a>
-<ul class="articles"><li class="chapter" data-level="2.16.1" data-path="../16/01.html"><a href="../16/01.html"><b>2.16.1.</b>第一节 《中华人民共和国劳动合同法》相关知识</a></li>
-<li class="chapter" data-level="2.16.2" data-path="../16/02.html"><a href="../16/02.html"><b>2.16.2.</b>第二节 《中华人民共和国消费者权益保护法》相关知识</a></li>
-<li class="chapter" data-level="2.16.3" data-path="../16/03.html"><a href="../16/03.html"><b>2.16.3.</b>第三节 《中华人民共和国执业医师》相关知识</a></li>
-<li class="chapter" data-level="2.16.4" data-path="../16/04.html"><a href="../16/04.html"><b>2.16.4.</b>第四节 《中华人民共和国食品安全法》相关知识</a></li>
-<li class="chapter" data-level="2.16.5" data-path="../16/05.html"><a href="../16/05.html"><b>2.16.5.</b>第五节 《中华人民共和国中医药法》相关知识</a></li></ul></li></ul>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
+<li class="chapter active" data-level="2.3" data-path="index.html"><a href="index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter" data-level="2.12" data-path="../12/index.html"><a href="../12/index.html"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter" data-level="2.15" data-path="../15/index.html"><a href="../15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<li class="header">专业技能</li>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="../../专业技能/01/index.html"><a href="../../专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
 <li class="header">国家职业资格三级</li>
             <li class="divider"></li>
             <li>
@@ -134,13 +78,107 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第三章 预防医学基础知识</a></li></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第三章 预防医学基础知识</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>预防医学概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>1.1. </b>预防医学的学科体系</a></li></ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>2. </b>健康影响因素</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>3. </b>三级预防策略</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>4. </b>临床预防服务概念及内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>5. </b>社区公共卫生服务</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>5.1. </b>社区公共卫生及其实施的原则</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>5.2. </b>国家基本公共卫生服务内容</a></li></ul></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第三章 预防医学基础知识</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 预防医学概述</h2>
+<h3 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>1.1. 预防医学的学科体系</h3>
+<p>从大的门类分，预防医学体系可分为流行病学、医学统计学、环境卫生科学、社会与行为科学以及卫生管理学 5 大学科。在理论体系上，流行病学和医学统计学为预防医学学科的基础方法学。</p>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康影响因素</h2>
+<p>环境因素、行为与生活方式因素、生物遗传因素、卫生服务。</p>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>3. 三级预防策略</h2>
 <ul>
-<li><a href="01">第一节 预防医学概述</a></li>
-<li><a href="02">第二节 临床预防服务</a></li>
-<li><a href="03">第三节 社区公共卫生服务</a></li>
+<li>
+<p>一级预防（病因预防）</p>
+<p>定义：如果在疾病的因子还没有进入环境之前就采取预防性措施，则称为根本性预防。</p>
+<ul>
+<li>
+<p>针对健康个体的措施</p>
+<ol>
+<li>个人的健康教育，注意合理营养和体格锻炼，培养良好的行为与生活方式；</li>
+<li>有组织地进行预防接种，提高人群免疫水平，预防疾病；</li>
+<li>做好婚前检查和禁止近亲结婚，预防遗传性疾病；</li>
+<li>做好妊娠和儿童期的卫生保健；</li>
+<li>某些疾病的高危个体服用药物来预防疾病的发生，即化学预防。</li>
+</ol>
+</li>
+<li>
+<p>针对公众健康所采取的社会和环境措施</p>
+<p>如制定和执行各种与健康有关的法律及规章制度，有益于健康的公共政策，利用各种媒体开展的公共健康教育，防止致病因素危害公众的健康，提高公众健康意识和自控能力。如清洁安全饮用水的提供，针对大气、水源、土壤的环境保护措施，食品安全，公众体育场所的修建，公共场所禁止吸烟等。</p>
+</li>
 </ul>
+</li>
+<li>
+<p>二级预防</p>
+<p>在疾病的临床前期做好早期发现、早期诊断、早期治疗的“三早”预防工作，以控制疾病的发展和恶化。</p>
+</li>
+<li>
+<p>三级预防</p>
+<ul>
+<li>对已患某些疾病的人，采取及时的、有效的治疗措施，防止病情恶化，预防并发症和伤残。</li>
+<li>对已丧失劳动力或残疾者，主要促使功能恢复、心理康复，进行家庭护理指导，使患者尽量恢复生活和劳动能力，能参加社会活动并延长寿命。</li>
+</ul>
+<p>三级预防策略的关系：</p>
+<ul>
+<li>
+<p>对不同类型的疾病，有不同的三级预防策略。</p>
+</li>
+<li>
+<p>任何疾病，不论其致病因子是否明确，都应强调第一级预防。如大骨节病、克山病等，病因尚未肯定， 但综合性的第一级预防还是有效的。</p>
+</li>
+<li>
+<p>如肿瘤更需要第一级和第二级预防。</p>
+</li>
+<li>
+<p>有些疾病，病因明确而且是人为的，如职业因素所致疾病、医源性疾病，采取第一级预防，较易见效。</p>
+</li>
+<li>
+<p>有些疾病的病因是多因素的，则要按其特点，通过筛检、及早诊断和治疗会使预后较好，如心、脑血管疾病、代谢性疾病。除针对其危险因素，致力于第一级预防外，还应兼顾第二级和第三级预防。</p>
+</li>
+<li>
+<p>对那些病因和危险因素都不明，又难以觉察预料的疾病，只有施行第三级预防这一途径。</p>
+</li>
+<li>
+<p>对许多传染病</p>
+<ol>
+<li>个体预防 --- 群体预防</li>
+<li>传染病的早发现、早隔离和早治疗，阻止其向人群的传播，也是群体预防的措施。</li>
+</ol>
+</li>
+<li>
+<p>高血压的控制</p>
+<p>就高血压本身来讲，是第三级预防，但对脑卒中和冠心病来讲，是第一级预防。</p>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>4. 临床预防服务概念及内容</h2>
+<p>概念：指在临床场所对健康者和无症状的“患者”病伤危险因素进行评价，然后实施个体的干预措施来促进健康和预防疾病。</p>
+<p>内容：健康咨询；健康筛检；化学预防。</p>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>5. 社区公共卫生服务</h2>
+<h3 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>5.1. 社区公共卫生及其实施的原则</h3>
+<ol>
+<li>以健康为中心</li>
+<li>以人群为对象</li>
+<li>以需求为导向</li>
+<li>多部门合作</li>
+<li>人人参与</li>
+</ol>
+<h3 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>5.2. 国家基本公共卫生服务内容</h3>
+<ol>
+<li>居民健康档案管理</li>
+<li>健康教育</li>
+<li>预防接种</li>
+<li>0～6 岁儿童健康管理服务</li>
+<li>孕产妇健康管理服务</li>
+<li>老年人健康管理服务（对辖区内 65 岁及以上常住居民每年提供 1 次健康管理服务）</li>
+<li>高血压患者健康管理服务（在对辖区内 35 岁及以上常住居民，每年免费测量血压一次；原发性高血压患者每年要提供至少 4 次面对面的随访）</li>
+<li>2 型糖尿病患者健康管理服务（建议其每年至少测量 1 次空腹血糖；对确诊的 2 型糖尿病患者，每年提供 4 次免费空腹血糖检测，至少进行 4 次面对面随访）</li>
+<li>严重精神障碍患者管理服务</li>
+<li>肺结核患者健康管理服务</li>
+<li>中医药健康管理服务</li>
+<li>传染病及突发公共卫生事件报告和处理服务</li>
+<li>卫生计生监督协管服务</li>
+</ol>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -172,7 +210,7 @@ All rights reserved.</span><span class="footer-modification">
 </a>
 
 
-<a aria-label="Next page: 第一节 预防医学概述" class="navigation navigation-next" href="01.html">
+<a aria-label="Next page: 第四章 常见慢性病" class="navigation navigation-next" href="../04/index.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -186,7 +224,7 @@ All rights reserved.</span><span class="footer-modification">
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
                 "previous_page_link": "../02/习题.html",
-                "next_page_link": "01.html"
+                "next_page_link": "../04/index.html"
             },
             "basePath": "../../..",
             "js": {}
