--- a/md/基础知识/09/01.html
+++ b/md/基础知识/09/01.html
@@ -35,41 +35,13 @@
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="../01/index.html"><a href="../01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
-<li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
-<li class="chapter" data-level="2.3.3" data-path="../03/03.html"><a href="../03/03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="../04/01.html"><a href="../04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="../04/02.html"><a href="../04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="../04/03.html"><a href="../04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="../04/04.html"><a href="../04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="../04/05.html"><a href="../04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter" data-level="2.4.6" data-path="../04/06.html"><a href="../04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="../04/07.html"><a href="../04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="../04/08.html"><a href="../04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
-<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.5.1" data-path="../05/01.html"><a href="../05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
-<li class="chapter" data-level="2.5.2" data-path="../05/02.html"><a href="../05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
-<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a>
-<ul class="articles"><li class="chapter" data-level="2.6.1" data-path="../06/01.html"><a href="../06/01.html"><b>2.6.1.</b>第一节 健康教育与健康促进概述</a></li>
-<li class="chapter" data-level="2.6.2" data-path="../06/02.html"><a href="../06/02.html"><b>2.6.2.</b>第二节 健康相关行为改变的理论</a></li>
-<li class="chapter" data-level="2.6.3" data-path="../06/03.html"><a href="../06/03.html"><b>2.6.3.</b>第三节 健康传播</a></li>
-<li class="chapter" data-level="2.6.4" data-path="../06/04.html"><a href="../06/04.html"><b>2.6.4.</b>第四节 健康教育计划的设计、实施与评价</a></li></ul></li>
-<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a>
-<ul class="articles"><li class="chapter" data-level="2.7.1" data-path="../07/01.html"><a href="../07/01.html"><b>2.7.1.</b>第一节 营养学基础</a></li>
-<li class="chapter" data-level="2.7.2" data-path="../07/02.html"><a href="../07/02.html"><b>2.7.2.</b>第二节 平衡膳食</a></li>
-<li class="chapter" data-level="2.7.3" data-path="../07/03.html"><a href="../07/03.html"><b>2.7.3.</b>第三节 保健食品</a></li>
-<li class="chapter" data-level="2.7.4" data-path="../07/04.html"><a href="../07/04.html"><b>2.7.4.</b>第四节 食品安全</a></li></ul></li>
-<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.8.1" data-path="../08/01.html"><a href="../08/01.html"><b>2.8.1.</b>第一节 身体活动及其健康益处</a></li>
-<li class="chapter" data-level="2.8.2" data-path="../08/02.html"><a href="../08/02.html"><b>2.8.2.</b>第二节 现有身体活动指南要点</a></li>
-<li class="chapter" data-level="2.8.3" data-path="../08/03.html"><a href="../08/03.html"><b>2.8.3.</b>第三节 慢性病与身体活动</a></li></ul></li>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
+<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
 <li class="chapter" data-level="2.9" data-path="index.html"><a href="index.html"><b>2.9.</b>第九章 心理健康</a>
 <ul class="articles"><li class="chapter active" data-level="2.9.1" data-path="01.html"><a href="01.html"><b>2.9.1.</b>第一节 心理健康与心理卫生</a></li>
 <li class="chapter" data-level="2.9.2" data-path="02.html"><a href="02.html"><b>2.9.2.</b>第二节 心理健康与心理发展</a></li>
