--- a/md/基础知识/12/index.html
+++ b/md/基础知识/12/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="01.html" rel="next"/>
+<link href="../13/index.html" rel="next"/>
 </head>
 <body>
 <div class="book match-braces"><div class="book-summary">
@@ -35,79 +35,23 @@
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="../01/index.html"><a href="../01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
-<li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
-<li class="chapter" data-level="2.3.3" data-path="../03/03.html"><a href="../03/03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="../04/01.html"><a href="../04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="../04/02.html"><a href="../04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="../04/03.html"><a href="../04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="../04/04.html"><a href="../04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="../04/05.html"><a href="../04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter" data-level="2.4.6" data-path="../04/06.html"><a href="../04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="../04/07.html"><a href="../04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="../04/08.html"><a href="../04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
-<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.5.1" data-path="../05/01.html"><a href="../05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
-<li class="chapter" data-level="2.5.2" data-path="../05/02.html"><a href="../05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
-<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a>
-<ul class="articles"><li class="chapter" data-level="2.6.1" data-path="../06/01.html"><a href="../06/01.html"><b>2.6.1.</b>第一节 健康教育与健康促进概述</a></li>
-<li class="chapter" data-level="2.6.2" data-path="../06/02.html"><a href="../06/02.html"><b>2.6.2.</b>第二节 健康相关行为改变的理论</a></li>
-<li class="chapter" data-level="2.6.3" data-path="../06/03.html"><a href="../06/03.html"><b>2.6.3.</b>第三节 健康传播</a></li>
-<li class="chapter" data-level="2.6.4" data-path="../06/04.html"><a href="../06/04.html"><b>2.6.4.</b>第四节 健康教育计划的设计、实施与评价</a></li></ul></li>
-<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a>
-<ul class="articles"><li class="chapter" data-level="2.7.1" data-path="../07/01.html"><a href="../07/01.html"><b>2.7.1.</b>第一节 营养学基础</a></li>
-<li class="chapter" data-level="2.7.2" data-path="../07/02.html"><a href="../07/02.html"><b>2.7.2.</b>第二节 平衡膳食</a></li>
-<li class="chapter" data-level="2.7.3" data-path="../07/03.html"><a href="../07/03.html"><b>2.7.3.</b>第三节 保健食品</a></li>
-<li class="chapter" data-level="2.7.4" data-path="../07/04.html"><a href="../07/04.html"><b>2.7.4.</b>第四节 食品安全</a></li></ul></li>
-<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.8.1" data-path="../08/01.html"><a href="../08/01.html"><b>2.8.1.</b>第一节 身体活动及其健康益处</a></li>
-<li class="chapter" data-level="2.8.2" data-path="../08/02.html"><a href="../08/02.html"><b>2.8.2.</b>第二节 现有身体活动指南要点</a></li>
-<li class="chapter" data-level="2.8.3" data-path="../08/03.html"><a href="../08/03.html"><b>2.8.3.</b>第三节 慢性病与身体活动</a></li></ul></li>
-<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a>
-<ul class="articles"><li class="chapter" data-level="2.9.1" data-path="../09/01.html"><a href="../09/01.html"><b>2.9.1.</b>第一节 心理健康与心理卫生</a></li>
-<li class="chapter" data-level="2.9.2" data-path="../09/02.html"><a href="../09/02.html"><b>2.9.2.</b>第二节 心理健康与心理发展</a></li>
-<li class="chapter" data-level="2.9.3" data-path="../09/03.html"><a href="../09/03.html"><b>2.9.3.</b>第三节 常见心理行为问题</a></li>
-<li class="chapter" data-level="2.9.4" data-path="../09/04.html"><a href="../09/04.html"><b>2.9.4.</b>第四节 常见心理障碍</a></li>
-<li class="chapter" data-level="2.9.5" data-path="../09/05.html"><a href="../09/05.html"><b>2.9.5.</b>第五节 心理健康的维护与促进</a></li></ul></li>
-<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.10.1" data-path="../10/01.html"><a href="../10/01.html"><b>2.10.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.10.2" data-path="../10/02.html"><a href="../10/02.html"><b>2.10.2.</b>第二节 常用养生保健方法</a></li></ul></li>
-<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.11.1" data-path="../11/01.html"><a href="../11/01.html"><b>2.11.1.</b>第一节 现代康复医学的兴起与发展</a></li>
-<li class="chapter" data-level="2.11.2" data-path="../11/02.html"><a href="../11/02.html"><b>2.11.2.</b>第二节 康复医学基本概念</a></li>
-<li class="chapter" data-level="2.11.3" data-path="../11/03.html"><a href="../11/03.html"><b>2.11.3.</b>第三节 康复医学基本内容</a></li>
-<li class="chapter" data-level="2.11.4" data-path="../11/04.html"><a href="../11/04.html"><b>2.11.4.</b>第四节 康复治疗技术</a></li></ul></li>
-<li class="chapter active" data-level="2.12" data-path="index.html"><a href="index.html"><b>2.12.</b>第十二章 健康信息学</a>
-<ul class="articles"><li class="chapter" data-level="2.12.1" data-path="01.html"><a href="01.html"><b>2.12.1.</b>第一节 信息学概述</a></li>
-<li class="chapter" data-level="2.12.2" data-path="02.html"><a href="02.html"><b>2.12.2.</b>第二节 健康信息收集、分析与利用</a></li>
-<li class="chapter" data-level="2.12.3" data-path="03.html"><a href="03.html"><b>2.12.3.</b>第三节 居民健康档案概述</a></li>
-<li class="chapter" data-level="2.12.4" data-path="04.html"><a href="04.html"><b>2.12.4.</b>第四节 健康大数据和互联网移动医疗</a></li></ul></li>
-<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a>
-<ul class="articles"><li class="chapter" data-level="2.13.1" data-path="../13/01.html"><a href="../13/01.html"><b>2.13.1.</b>第一节 医学伦理与健康管理伦理的定义和基本原则</a></li>
-<li class="chapter" data-level="2.13.2" data-path="../13/02.html"><a href="../13/02.html"><b>2.13.2.</b>第二节 健康管理伦理规范及权力、义务</a></li>
-<li class="chapter" data-level="2.13.3" data-path="../13/03.html"><a href="../13/03.html"><b>2.13.3.</b>第三节 健康管理师职业道德</a></li></ul></li>
-<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a>
-<ul class="articles"><li class="chapter" data-level="2.14.1" data-path="../14/01.html"><a href="../14/01.html"><b>2.14.1.</b>第一节 健康保险概述</a></li>
-<li class="chapter" data-level="2.14.2" data-path="../14/02.html"><a href="../14/02.html"><b>2.14.2.</b>第二节 健康管理在健康保险中的应用</a></li></ul></li>
-<li class="chapter" data-level="2.15" data-path="../15/index.html"><a href="../15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a>
-<ul class="articles"><li class="chapter" data-level="2.15.1" data-path="../15/01.html"><a href="../15/01.html"><b>2.15.1.</b>第一节 健康管理服务概述</a></li>
-<li class="chapter" data-level="2.15.2" data-path="../15/02.html"><a href="../15/02.html"><b>2.15.2.</b>第二节 健康管理服务的消费行为分析</a></li>
-<li class="chapter" data-level="2.15.3" data-path="../15/03.html"><a href="../15/03.html"><b>2.15.3.</b>第三节 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.15.4" data-path="../15/04.html"><a href="../15/04.html"><b>2.15.4.</b>第四节 健康管理相关产品</a></li>
-<li class="chapter" data-level="2.15.5" data-path="../15/05.html"><a href="../15/05.html"><b>2.15.5.</b>第五节 健康管理服务案例</a></li></ul></li>
-<li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a>
-<ul class="articles"><li class="chapter" data-level="2.16.1" data-path="../16/01.html"><a href="../16/01.html"><b>2.16.1.</b>第一节 《中华人民共和国劳动合同法》相关知识</a></li>
-<li class="chapter" data-level="2.16.2" data-path="../16/02.html"><a href="../16/02.html"><b>2.16.2.</b>第二节 《中华人民共和国消费者权益保护法》相关知识</a></li>
-<li class="chapter" data-level="2.16.3" data-path="../16/03.html"><a href="../16/03.html"><b>2.16.3.</b>第三节 《中华人民共和国执业医师》相关知识</a></li>
-<li class="chapter" data-level="2.16.4" data-path="../16/04.html"><a href="../16/04.html"><b>2.16.4.</b>第四节 《中华人民共和国食品安全法》相关知识</a></li>
-<li class="chapter" data-level="2.16.5" data-path="../16/05.html"><a href="../16/05.html"><b>2.16.5.</b>第五节 《中华人民共和国中医药法》相关知识</a></li></ul></li></ul>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
+<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter active" data-level="2.12" data-path="index.html"><a href="index.html"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter" data-level="2.15" data-path="../15/index.html"><a href="../15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<li class="header">专业技能</li>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="../../专业技能/01/index.html"><a href="../../专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
 <li class="header">国家职业资格三级</li>
             <li class="divider"></li>
             <li>
@@ -134,14 +78,56 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十二章 健康信息学</a></li></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十二章 健康信息学</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>信息的特征和分类</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>1.1. </b>特征</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>1.2. </b>分类</a></li></ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>2. </b>健康信息收集和整理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>3. </b>居民健康档案</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>3.1. </b>意义</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>3.2. </b>基本要求</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>3.3. </b>分类</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>3.4. </b>原则</a></li></ul></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十二章 健康信息学</h1>
-<ul>
-<li><a href="01">第一节 信息学概述</a></li>
-<li><a href="02">第二节 健康信息收集、分析与利用</a></li>
-<li><a href="03">第三节 居民健康档案概述</a></li>
-<li><a href="04">第四节 健康大数据和互联网移动医疗</a></li>
-</ul>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 信息的特征和分类</h2>
+<h3 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>1.1. 特征</h3>
+<ol>
+<li>可识别性；</li>
+<li>可存储性；</li>
+<li>可扩充性；</li>
+<li>可共享性；</li>
+<li>可传递性；</li>
+<li>可转换性；</li>
+<li>可再生性；</li>
+<li>时效性和时滞性。</li>
+</ol>
+<h3 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>1.2. 分类</h3>
+<ol>
+<li>重要性程度：战略信息、战术信息、作业信息。</li>
+<li>应用领域：管理信息、社会信息、科技信息、军事信息。</li>
+<li>信息的加工顺序：一次信息、二次信息、三次信息。</li>
+<li>信息的反映形式：数字信息、图像信息、声音信息。</li>
+<li>信息的性质：语法信息、语义信息、语用信息。</li>
+<li>观察过程：实在信息、先验信息、实得信息。</li>
+<li>信息的作用：有用信息、辅助信息、无用信息、有害信息。</li>
+<li>信息的传递方向：前馈信息、反馈信息。</li>
+</ol>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康信息收集和整理</h2>
+<p>信息来源：各类卫生服务记录（卫生服务过程中的各种服务记录、定期或不定期的健康体检记录、专题健康或疾病调查记录）</p>
+<p>信息收集原则：①计划性；②真实性；③完整性；④系统性；⑤针对性；⑥及时性。</p>
+<p>信息收集方法：①访谈法；②实地观察法；③问卷法。</p>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>3. 居民健康档案</h2>
+<h3 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>3.1. 意义</h3>
+<ol>
+<li>帮助健康管理者全面系统的了解居民的健康问题及其患病的相关背景信息。</li>
+<li>有助于促进社区卫生服务的规范化。</li>
+<li>有助于全面评价社区居民的健康问题。</li>
+<li>有助于制定准确试用的卫生保健计划，合理利用社区有限的卫生资源，提高社区卫生服务的管理水平。</li>
+<li>用于评价健康管理者的服务质量和技术水平，还可作为处理医疗纠纷的法律依据。</li>
+<li>医学教学科研的重要参考资料。</li>
+<li>作为政府、医疗管理机构收集基层医疗信息的重要渠道。</li>
+</ol>
+<h3 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>3.2. 基本要求</h3>
+<p>资料真实性、科学性、完整性、连续性和可用性。</p>
+<h3 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>3.3. 分类</h3>
+<p>个人健康档案、家庭健康档案、社区健康档案。</p>
+<h3 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>3.4. 原则</h3>
+<ol>
+<li>自愿为主，多种方式相结合；</li>
+<li>体现健康管理和连续性服务的特点；</li>
+<li>科学性与灵活性相结合。</li>
+</ol>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -168,12 +154,12 @@ All rights reserved.</span><span class="footer-modification">
 </div>
 
 
-<a aria-label="Previous page: 第四节 康复治疗技术" class="navigation navigation-prev" href="../11/04.html">
+<a aria-label="Previous page: 第十一章 康复医学基础知识" class="navigation navigation-prev" href="../11/index.html">
     <i class="fa fa-angle-left"></i>
 </a>
 
 
-<a aria-label="Next page: 第一节 信息学概述" class="navigation navigation-next" href="01.html">
+<a aria-label="Next page: 第十三章 医学伦理与职业道德" class="navigation navigation-next" href="../13/index.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -186,8 +172,8 @@ All rights reserved.</span><span class="footer-modification">
             "config": {
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
-                "previous_page_link": "../11/04.html",
-                "next_page_link": "01.html"
+                "previous_page_link": "../11/index.html",
+                "next_page_link": "../13/index.html"
             },
             "basePath": "../../..",
             "js": {}
