--- a/md/基础知识/15/index.html
+++ b/md/基础知识/15/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="01.html" rel="next"/>
+<link href="../16/index.html" rel="next"/>
 </head>
 <body>
 <div class="book match-braces"><div class="book-summary">
@@ -35,79 +35,23 @@
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="../01/index.html"><a href="../01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
-<li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
-<li class="chapter" data-level="2.3.3" data-path="../03/03.html"><a href="../03/03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="../04/01.html"><a href="../04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="../04/02.html"><a href="../04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="../04/03.html"><a href="../04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="../04/04.html"><a href="../04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="../04/05.html"><a href="../04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter" data-level="2.4.6" data-path="../04/06.html"><a href="../04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="../04/07.html"><a href="../04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="../04/08.html"><a href="../04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
-<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.5.1" data-path="../05/01.html"><a href="../05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
-<li class="chapter" data-level="2.5.2" data-path="../05/02.html"><a href="../05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
-<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a>
-<ul class="articles"><li class="chapter" data-level="2.6.1" data-path="../06/01.html"><a href="../06/01.html"><b>2.6.1.</b>第一节 健康教育与健康促进概述</a></li>
-<li class="chapter" data-level="2.6.2" data-path="../06/02.html"><a href="../06/02.html"><b>2.6.2.</b>第二节 健康相关行为改变的理论</a></li>
-<li class="chapter" data-level="2.6.3" data-path="../06/03.html"><a href="../06/03.html"><b>2.6.3.</b>第三节 健康传播</a></li>
-<li class="chapter" data-level="2.6.4" data-path="../06/04.html"><a href="../06/04.html"><b>2.6.4.</b>第四节 健康教育计划的设计、实施与评价</a></li></ul></li>
-<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a>
-<ul class="articles"><li class="chapter" data-level="2.7.1" data-path="../07/01.html"><a href="../07/01.html"><b>2.7.1.</b>第一节 营养学基础</a></li>
-<li class="chapter" data-level="2.7.2" data-path="../07/02.html"><a href="../07/02.html"><b>2.7.2.</b>第二节 平衡膳食</a></li>
-<li class="chapter" data-level="2.7.3" data-path="../07/03.html"><a href="../07/03.html"><b>2.7.3.</b>第三节 保健食品</a></li>
-<li class="chapter" data-level="2.7.4" data-path="../07/04.html"><a href="../07/04.html"><b>2.7.4.</b>第四节 食品安全</a></li></ul></li>
-<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.8.1" data-path="../08/01.html"><a href="../08/01.html"><b>2.8.1.</b>第一节 身体活动及其健康益处</a></li>
-<li class="chapter" data-level="2.8.2" data-path="../08/02.html"><a href="../08/02.html"><b>2.8.2.</b>第二节 现有身体活动指南要点</a></li>
-<li class="chapter" data-level="2.8.3" data-path="../08/03.html"><a href="../08/03.html"><b>2.8.3.</b>第三节 慢性病与身体活动</a></li></ul></li>
-<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a>
-<ul class="articles"><li class="chapter" data-level="2.9.1" data-path="../09/01.html"><a href="../09/01.html"><b>2.9.1.</b>第一节 心理健康与心理卫生</a></li>
-<li class="chapter" data-level="2.9.2" data-path="../09/02.html"><a href="../09/02.html"><b>2.9.2.</b>第二节 心理健康与心理发展</a></li>
-<li class="chapter" data-level="2.9.3" data-path="../09/03.html"><a href="../09/03.html"><b>2.9.3.</b>第三节 常见心理行为问题</a></li>
-<li class="chapter" data-level="2.9.4" data-path="../09/04.html"><a href="../09/04.html"><b>2.9.4.</b>第四节 常见心理障碍</a></li>
-<li class="chapter" data-level="2.9.5" data-path="../09/05.html"><a href="../09/05.html"><b>2.9.5.</b>第五节 心理健康的维护与促进</a></li></ul></li>
-<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.10.1" data-path="../10/01.html"><a href="../10/01.html"><b>2.10.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.10.2" data-path="../10/02.html"><a href="../10/02.html"><b>2.10.2.</b>第二节 常用养生保健方法</a></li></ul></li>
-<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.11.1" data-path="../11/01.html"><a href="../11/01.html"><b>2.11.1.</b>第一节 现代康复医学的兴起与发展</a></li>
-<li class="chapter" data-level="2.11.2" data-path="../11/02.html"><a href="../11/02.html"><b>2.11.2.</b>第二节 康复医学基本概念</a></li>
-<li class="chapter" data-level="2.11.3" data-path="../11/03.html"><a href="../11/03.html"><b>2.11.3.</b>第三节 康复医学基本内容</a></li>
-<li class="chapter" data-level="2.11.4" data-path="../11/04.html"><a href="../11/04.html"><b>2.11.4.</b>第四节 康复治疗技术</a></li></ul></li>
-<li class="chapter" data-level="2.12" data-path="../12/index.html"><a href="../12/index.html"><b>2.12.</b>第十二章 健康信息学</a>
-<ul class="articles"><li class="chapter" data-level="2.12.1" data-path="../12/01.html"><a href="../12/01.html"><b>2.12.1.</b>第一节 信息学概述</a></li>
-<li class="chapter" data-level="2.12.2" data-path="../12/02.html"><a href="../12/02.html"><b>2.12.2.</b>第二节 健康信息收集、分析与利用</a></li>
-<li class="chapter" data-level="2.12.3" data-path="../12/03.html"><a href="../12/03.html"><b>2.12.3.</b>第三节 居民健康档案概述</a></li>
-<li class="chapter" data-level="2.12.4" data-path="../12/04.html"><a href="../12/04.html"><b>2.12.4.</b>第四节 健康大数据和互联网移动医疗</a></li></ul></li>
-<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a>
-<ul class="articles"><li class="chapter" data-level="2.13.1" data-path="../13/01.html"><a href="../13/01.html"><b>2.13.1.</b>第一节 医学伦理与健康管理伦理的定义和基本原则</a></li>
-<li class="chapter" data-level="2.13.2" data-path="../13/02.html"><a href="../13/02.html"><b>2.13.2.</b>第二节 健康管理伦理规范及权力、义务</a></li>
-<li class="chapter" data-level="2.13.3" data-path="../13/03.html"><a href="../13/03.html"><b>2.13.3.</b>第三节 健康管理师职业道德</a></li></ul></li>
-<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a>
-<ul class="articles"><li class="chapter" data-level="2.14.1" data-path="../14/01.html"><a href="../14/01.html"><b>2.14.1.</b>第一节 健康保险概述</a></li>
-<li class="chapter" data-level="2.14.2" data-path="../14/02.html"><a href="../14/02.html"><b>2.14.2.</b>第二节 健康管理在健康保险中的应用</a></li></ul></li>
-<li class="chapter active" data-level="2.15" data-path="index.html"><a href="index.html"><b>2.15.</b>第十五章 健康管理服务营销</a>
-<ul class="articles"><li class="chapter" data-level="2.15.1" data-path="01.html"><a href="01.html"><b>2.15.1.</b>第一节 健康管理服务概述</a></li>
-<li class="chapter" data-level="2.15.2" data-path="02.html"><a href="02.html"><b>2.15.2.</b>第二节 健康管理服务的消费行为分析</a></li>
-<li class="chapter" data-level="2.15.3" data-path="03.html"><a href="03.html"><b>2.15.3.</b>第三节 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.15.4" data-path="04.html"><a href="04.html"><b>2.15.4.</b>第四节 健康管理相关产品</a></li>
-<li class="chapter" data-level="2.15.5" data-path="05.html"><a href="05.html"><b>2.15.5.</b>第五节 健康管理服务案例</a></li></ul></li>
-<li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a>
-<ul class="articles"><li class="chapter" data-level="2.16.1" data-path="../16/01.html"><a href="../16/01.html"><b>2.16.1.</b>第一节 《中华人民共和国劳动合同法》相关知识</a></li>
-<li class="chapter" data-level="2.16.2" data-path="../16/02.html"><a href="../16/02.html"><b>2.16.2.</b>第二节 《中华人民共和国消费者权益保护法》相关知识</a></li>
-<li class="chapter" data-level="2.16.3" data-path="../16/03.html"><a href="../16/03.html"><b>2.16.3.</b>第三节 《中华人民共和国执业医师》相关知识</a></li>
-<li class="chapter" data-level="2.16.4" data-path="../16/04.html"><a href="../16/04.html"><b>2.16.4.</b>第四节 《中华人民共和国食品安全法》相关知识</a></li>
-<li class="chapter" data-level="2.16.5" data-path="../16/05.html"><a href="../16/05.html"><b>2.16.5.</b>第五节 《中华人民共和国中医药法》相关知识</a></li></ul></li></ul>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
+<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter" data-level="2.12" data-path="../12/index.html"><a href="../12/index.html"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter active" data-level="2.15" data-path="index.html"><a href="index.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter" data-level="2.16" data-path="../16/index.html"><a href="../16/index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<li class="header">专业技能</li>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="../../专业技能/01/index.html"><a href="../../专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
 <li class="header">国家职业资格三级</li>
             <li class="divider"></li>
             <li>
@@ -134,15 +78,80 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十五章 健康管理服务营销</a></li></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十五章 健康管理服务营销</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理服务</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理服务特性</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理 PDCA 循环步骤</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理消费行为特征</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>消费者的购买决策过程</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康管理需求特征</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康管理服务</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十五章 健康管理服务营销</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理服务</h2>
+<p>健康管理服务主要包括三个层次：提高健康认知水平、生活方式的改变、建立支持性环境。</p>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理服务特性</h2>
+<ol>
+<li>无形性；</li>
+<li>不可分割性（一段互动过程，所有判定要素）；</li>
+<li>不稳定性；</li>
+<li>易逝性（不可存储 + 适时 + 个性化）；</li>
+<li>客户的满意标准是不同的；</li>
+<li>客户的参与程度。</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理 PDCA 循环步骤</h2>
+<p>健康管理 PDCA 循环可以分为四个阶段八个步骤实施</p>
 <ul>
-<li><a href="01">第一节 健康管理服务概述</a></li>
-<li><a href="02">第二节 健康管理服务的消费行为分析</a></li>
-<li><a href="03">第三节 健康管理服务营销</a></li>
-<li><a href="04">第四节 健康管理相关产品</a></li>
-<li><a href="05">第五节 健康管理服务案例</a></li>
+<li>第一阶段：（计划阶段）
+<ul>
+<li>第一步健康身体检查，分析健康现状，发现健康问题。</li>
+<li>第二步分析健康问题中各种危险因素。</li>
+<li>第三步分析影响健康风险的行为危险因素。</li>
+<li>第四步针对行为危险因素，制订干预计划（开具健康管理处方）。</li>
 </ul>
+</li>
+<li>第二阶段：（实施）
+<ul>
+<li>第五步按干预计划内容执行。</li>
+</ul>
+</li>
+<li>第三阶段：（检查）
+<ul>
+<li>第六步把执行结果与要求达到的目标进行对比，进行绩效评价。</li>
+<li>第七步把成功的经验总结出来，制订相应的健康行为标准。</li>
+</ul>
+</li>
+<li>第四阶段：（处理）
+<ul>
+<li>第八步把没有解决或新出现的问题转入下一个 PDCA 循环。生活方式疾病风险的评估方法在整个 PDCA 循环过程中非常重要，健康管理师可以运用软件的信息管理功能为目标对象实施健康管理服务。</li>
+</ul>
+</li>
+</ul>
+<p>服务路径包括：</p>
+<p>健康体检 - 风险评估 - 管理分组 - 干预处方 - 执行处方 - 绩效检查（健康体检 + 健康评估）- 确定下一步的健康管理计划。</p>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理消费行为特征</h2>
+<p>健康管理消费行为影响因素：经济收入、教育程度、专业知识、个性、地点、时间等。</p>
+<p>特征：</p>
+<ol>
+<li>习惯型（HQ 高，依从性好，对服务依赖）</li>
+<li>经济型（对价格敏感，追求物超所值）</li>
+<li>理智型（对机构、项目反复比对，十分慎重）</li>
+<li>盲目型（缺乏健康知识，易受广告诱导）</li>
+<li>躲闪型（不敢体检，不做健康管理，不想单位知道自己健康有问题）</li>
+</ol>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 消费者的购买决策过程</h2>
+<ul>
+<li>第 1 阶段：识别需求（健康体检）</li>
+<li>第 2 阶段：搜索信息（健康评估）</li>
+<li>第 3 阶段：备选方案评估（健康干预套餐）</li>
+<li>第 4 阶段：选择购买；</li>
+<li>第 5 阶段：购买后评估。</li>
+</ul>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康管理需求特征</h2>
+<ol>
+<li>需求的被动型（疾病预防为目标的健康服务）</li>
+<li>需求的不确定性（健康风险评估、个人健康改善行动）</li>
+<li>需求的差异性（健康观念、行为矫正、环境压力）</li>
+<li>需求的发展性（生活方式—精神压力；体重干预—代谢问题）</li>
+<li>需求的外部关联性（个体 - 家庭 - 企事业单位）</li>
+<li>需求的广泛性（不同个体，不同阶段，不同健康风险）</li>
+<li>需求的超前性与滞后性（预防疾病—超前，消费观念—滞后）</li>
+<li>需求的重复性（风险与疾病，疾病成为其他疾病的风险）</li>
+</ol>
+<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理服务</h2>
+<p>营销过程：①确定目标客户；②分析评价需求；③选择和利用资源；④确定产品价值；⑤促进客户购买；⑥客户健康价值健康管理服务营销组合包括：产品、价格、渠道、促销、有形展、过程、人员。</p>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -169,12 +178,12 @@ All rights reserved.</span><span class="footer-modification">
 </div>
 
 
-<a aria-label="Previous page: 第二节 健康管理在健康保险中的应用" class="navigation navigation-prev" href="../14/02.html">
+<a aria-label="Previous page: 第十四章 健康保险与健康管理" class="navigation navigation-prev" href="../14/index.html">
     <i class="fa fa-angle-left"></i>
 </a>
 
 
-<a aria-label="Next page: 第一节 健康管理服务概述" class="navigation navigation-next" href="01.html">
+<a aria-label="Next page: 第十六章 健康管理相关法律、法规知识" class="navigation navigation-next" href="../16/index.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -187,8 +196,8 @@ All rights reserved.</span><span class="footer-modification">
             "config": {
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
-                "previous_page_link": "../14/02.html",
-                "next_page_link": "01.html"
+                "previous_page_link": "../14/index.html",
+                "next_page_link": "../16/index.html"
             },
             "basePath": "../../..",
             "js": {}
