--- a/md/基础知识/16/index.html
+++ b/md/基础知识/16/index.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="01.html" rel="next"/>
+<link href="../../专业技能/01/index.html" rel="next"/>
 </head>
 <body>
 <div class="book match-braces"><div class="book-summary">
@@ -35,79 +35,23 @@
 <ul class="articles"><li class="chapter" data-level="2.1" data-path="../01/index.html"><a href="../01/index.html"><b>2.1.</b>第一章 健康管理概述</a>
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.1.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
-<li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
-<li class="chapter" data-level="2.3.3" data-path="../03/03.html"><a href="../03/03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="../04/01.html"><a href="../04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="../04/02.html"><a href="../04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="../04/03.html"><a href="../04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="../04/04.html"><a href="../04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="../04/05.html"><a href="../04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter" data-level="2.4.6" data-path="../04/06.html"><a href="../04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="../04/07.html"><a href="../04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="../04/08.html"><a href="../04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
-<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.5.1" data-path="../05/01.html"><a href="../05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
-<li class="chapter" data-level="2.5.2" data-path="../05/02.html"><a href="../05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
-<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a>
-<ul class="articles"><li class="chapter" data-level="2.6.1" data-path="../06/01.html"><a href="../06/01.html"><b>2.6.1.</b>第一节 健康教育与健康促进概述</a></li>
-<li class="chapter" data-level="2.6.2" data-path="../06/02.html"><a href="../06/02.html"><b>2.6.2.</b>第二节 健康相关行为改变的理论</a></li>
-<li class="chapter" data-level="2.6.3" data-path="../06/03.html"><a href="../06/03.html"><b>2.6.3.</b>第三节 健康传播</a></li>
-<li class="chapter" data-level="2.6.4" data-path="../06/04.html"><a href="../06/04.html"><b>2.6.4.</b>第四节 健康教育计划的设计、实施与评价</a></li></ul></li>
-<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a>
-<ul class="articles"><li class="chapter" data-level="2.7.1" data-path="../07/01.html"><a href="../07/01.html"><b>2.7.1.</b>第一节 营养学基础</a></li>
-<li class="chapter" data-level="2.7.2" data-path="../07/02.html"><a href="../07/02.html"><b>2.7.2.</b>第二节 平衡膳食</a></li>
-<li class="chapter" data-level="2.7.3" data-path="../07/03.html"><a href="../07/03.html"><b>2.7.3.</b>第三节 保健食品</a></li>
-<li class="chapter" data-level="2.7.4" data-path="../07/04.html"><a href="../07/04.html"><b>2.7.4.</b>第四节 食品安全</a></li></ul></li>
-<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a>
-<ul class="articles"><li class="chapter" data-level="2.8.1" data-path="../08/01.html"><a href="../08/01.html"><b>2.8.1.</b>第一节 身体活动及其健康益处</a></li>
-<li class="chapter" data-level="2.8.2" data-path="../08/02.html"><a href="../08/02.html"><b>2.8.2.</b>第二节 现有身体活动指南要点</a></li>
-<li class="chapter" data-level="2.8.3" data-path="../08/03.html"><a href="../08/03.html"><b>2.8.3.</b>第三节 慢性病与身体活动</a></li></ul></li>
-<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a>
-<ul class="articles"><li class="chapter" data-level="2.9.1" data-path="../09/01.html"><a href="../09/01.html"><b>2.9.1.</b>第一节 心理健康与心理卫生</a></li>
-<li class="chapter" data-level="2.9.2" data-path="../09/02.html"><a href="../09/02.html"><b>2.9.2.</b>第二节 心理健康与心理发展</a></li>
-<li class="chapter" data-level="2.9.3" data-path="../09/03.html"><a href="../09/03.html"><b>2.9.3.</b>第三节 常见心理行为问题</a></li>
-<li class="chapter" data-level="2.9.4" data-path="../09/04.html"><a href="../09/04.html"><b>2.9.4.</b>第四节 常见心理障碍</a></li>
-<li class="chapter" data-level="2.9.5" data-path="../09/05.html"><a href="../09/05.html"><b>2.9.5.</b>第五节 心理健康的维护与促进</a></li></ul></li>
-<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.10.1" data-path="../10/01.html"><a href="../10/01.html"><b>2.10.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.10.2" data-path="../10/02.html"><a href="../10/02.html"><b>2.10.2.</b>第二节 常用养生保健方法</a></li></ul></li>
-<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.11.1" data-path="../11/01.html"><a href="../11/01.html"><b>2.11.1.</b>第一节 现代康复医学的兴起与发展</a></li>
-<li class="chapter" data-level="2.11.2" data-path="../11/02.html"><a href="../11/02.html"><b>2.11.2.</b>第二节 康复医学基本概念</a></li>
-<li class="chapter" data-level="2.11.3" data-path="../11/03.html"><a href="../11/03.html"><b>2.11.3.</b>第三节 康复医学基本内容</a></li>
-<li class="chapter" data-level="2.11.4" data-path="../11/04.html"><a href="../11/04.html"><b>2.11.4.</b>第四节 康复治疗技术</a></li></ul></li>
-<li class="chapter" data-level="2.12" data-path="../12/index.html"><a href="../12/index.html"><b>2.12.</b>第十二章 健康信息学</a>
-<ul class="articles"><li class="chapter" data-level="2.12.1" data-path="../12/01.html"><a href="../12/01.html"><b>2.12.1.</b>第一节 信息学概述</a></li>
-<li class="chapter" data-level="2.12.2" data-path="../12/02.html"><a href="../12/02.html"><b>2.12.2.</b>第二节 健康信息收集、分析与利用</a></li>
-<li class="chapter" data-level="2.12.3" data-path="../12/03.html"><a href="../12/03.html"><b>2.12.3.</b>第三节 居民健康档案概述</a></li>
-<li class="chapter" data-level="2.12.4" data-path="../12/04.html"><a href="../12/04.html"><b>2.12.4.</b>第四节 健康大数据和互联网移动医疗</a></li></ul></li>
-<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a>
-<ul class="articles"><li class="chapter" data-level="2.13.1" data-path="../13/01.html"><a href="../13/01.html"><b>2.13.1.</b>第一节 医学伦理与健康管理伦理的定义和基本原则</a></li>
-<li class="chapter" data-level="2.13.2" data-path="../13/02.html"><a href="../13/02.html"><b>2.13.2.</b>第二节 健康管理伦理规范及权力、义务</a></li>
-<li class="chapter" data-level="2.13.3" data-path="../13/03.html"><a href="../13/03.html"><b>2.13.3.</b>第三节 健康管理师职业道德</a></li></ul></li>
-<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a>
-<ul class="articles"><li class="chapter" data-level="2.14.1" data-path="../14/01.html"><a href="../14/01.html"><b>2.14.1.</b>第一节 健康保险概述</a></li>
-<li class="chapter" data-level="2.14.2" data-path="../14/02.html"><a href="../14/02.html"><b>2.14.2.</b>第二节 健康管理在健康保险中的应用</a></li></ul></li>
-<li class="chapter" data-level="2.15" data-path="../15/index.html"><a href="../15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a>
-<ul class="articles"><li class="chapter" data-level="2.15.1" data-path="../15/01.html"><a href="../15/01.html"><b>2.15.1.</b>第一节 健康管理服务概述</a></li>
-<li class="chapter" data-level="2.15.2" data-path="../15/02.html"><a href="../15/02.html"><b>2.15.2.</b>第二节 健康管理服务的消费行为分析</a></li>
-<li class="chapter" data-level="2.15.3" data-path="../15/03.html"><a href="../15/03.html"><b>2.15.3.</b>第三节 健康管理服务营销</a></li>
-<li class="chapter" data-level="2.15.4" data-path="../15/04.html"><a href="../15/04.html"><b>2.15.4.</b>第四节 健康管理相关产品</a></li>
-<li class="chapter" data-level="2.15.5" data-path="../15/05.html"><a href="../15/05.html"><b>2.15.5.</b>第五节 健康管理服务案例</a></li></ul></li>
-<li class="chapter active" data-level="2.16" data-path="index.html"><a href="index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a>
-<ul class="articles"><li class="chapter" data-level="2.16.1" data-path="01.html"><a href="01.html"><b>2.16.1.</b>第一节 《中华人民共和国劳动合同法》相关知识</a></li>
-<li class="chapter" data-level="2.16.2" data-path="02.html"><a href="02.html"><b>2.16.2.</b>第二节 《中华人民共和国消费者权益保护法》相关知识</a></li>
-<li class="chapter" data-level="2.16.3" data-path="03.html"><a href="03.html"><b>2.16.3.</b>第三节 《中华人民共和国执业医师》相关知识</a></li>
-<li class="chapter" data-level="2.16.4" data-path="04.html"><a href="04.html"><b>2.16.4.</b>第四节 《中华人民共和国食品安全法》相关知识</a></li>
-<li class="chapter" data-level="2.16.5" data-path="05.html"><a href="05.html"><b>2.16.5.</b>第五节 《中华人民共和国中医药法》相关知识</a></li></ul></li></ul>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.1.</b>习题</a></li></ul></li>
+<li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a></li>
+<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a></li>
+<li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a></li>
+<li class="chapter" data-level="2.6" data-path="../06/index.html"><a href="../06/index.html"><b>2.6.</b>第六章 健康教育学</a></li>
+<li class="chapter" data-level="2.7" data-path="../07/index.html"><a href="../07/index.html"><b>2.7.</b>第七章 营养与食品安全</a></li>
+<li class="chapter" data-level="2.8" data-path="../08/index.html"><a href="../08/index.html"><b>2.8.</b>第八章 身体活动基本知识</a></li>
+<li class="chapter" data-level="2.9" data-path="../09/index.html"><a href="../09/index.html"><b>2.9.</b>第九章 心理健康</a></li>
+<li class="chapter" data-level="2.10" data-path="../10/index.html"><a href="../10/index.html"><b>2.10.</b>第十章 中医养生学基础知识</a></li>
+<li class="chapter" data-level="2.11" data-path="../11/index.html"><a href="../11/index.html"><b>2.11.</b>第十一章 康复医学基础知识</a></li>
+<li class="chapter" data-level="2.12" data-path="../12/index.html"><a href="../12/index.html"><b>2.12.</b>第十二章 健康信息学</a></li>
+<li class="chapter" data-level="2.13" data-path="../13/index.html"><a href="../13/index.html"><b>2.13.</b>第十三章 医学伦理与职业道德</a></li>
+<li class="chapter" data-level="2.14" data-path="../14/index.html"><a href="../14/index.html"><b>2.14.</b>第十四章 健康保险与健康管理</a></li>
+<li class="chapter" data-level="2.15" data-path="../15/index.html"><a href="../15/index.html"><b>2.15.</b>第十五章 健康管理服务营销</a></li>
+<li class="chapter active" data-level="2.16" data-path="index.html"><a href="index.html"><b>2.16.</b>第十六章 健康管理相关法律、法规知识</a></li></ul>
+<li class="header">专业技能</li>
+<ul class="articles"><li class="chapter" data-level="3.1" data-path="../../专业技能/01/index.html"><a href="../../专业技能/01/index.html"><b>3.1.</b>专业技能</a></li></ul>
 <li class="header">国家职业资格三级</li>
             <li class="divider"></li>
             <li>
@@ -134,15 +78,47 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十六章 健康管理相关法律、法规知识</a></li></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十六章 健康管理相关法律、法规知识</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>《中华人民共和国食品安全法》</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>1.1. </b>立法宗旨</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>1.2. </b>适用范围</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>1.3. </b>食品生产经营</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>1.4. </b>食品安全风险监测和评估</a></li></ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>2. </b>《中华人民共和国中医药法》</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>2.1. </b>立法宗旨</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>2.2. </b>立法亮点</a></li></ul></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十六章 健康管理相关法律、法规知识</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 《中华人民共和国食品安全法》</h2>
+<h3 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>1.1. 立法宗旨</h3>
+<p>保证食品安全，保障公众身体健康和生命安全。</p>
+<h3 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>1.2. 适用范围</h3>
+<p>在中华人民共和国境内从事下列活动，应当遵守本法：</p>
+<ol>
+<li>食品生产和加工（以下称食品生产），食品流通和餐饮服务（以下称食品经营）；</li>
+<li>食品添加剂的生产经营；</li>
+<li>用于食品的包装材料、容器、洗涤剂、消毒剂和用于食品生产经营的工具、设备的生产经营；</li>
+<li>食品生产经营者使用食品添加剂、食品相关产品；</li>
+<li>对食品、食品添加剂和食品相关产品的安全管理。供食用的源于农业的初级产品（以下称食用农产品）的质量安全管理，遵守《中华人民共和国农产品质量安全法》的规定。但是，制定有关食用农产品的质量安全标准、公布食用农产品安全有关信息，应当遵守本法的有关规定。</li>
+</ol>
+<h3 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>1.3. 食品生产经营</h3>
+<p>预包装食品的包装上应当有标签。标签应当标明下列事项：</p>
 <ul>
-<li><a href="01">第一节 《中华人民共和国劳动合同法》相关知识</a></li>
-<li><a href="02">第二节 《中华人民共和国消费者权益保护法》相关知识</a></li>
-<li><a href="03">第三节 《中华人民共和国执业医师》相关知识</a></li>
-<li><a href="04">第四节 《中华人民共和国食品安全法》相关知识</a></li>
-<li><a href="05">第五节 《中华人民共和国中医药法》相关知识</a></li>
+<li>名称、规格、净含量、生产日期；</li>
+<li>成分或者配料表；</li>
+<li>生产者的名称、地址、联系方式；</li>
+<li>保质期；</li>
+<li>产品标准代号；</li>
+<li>贮存条件；</li>
+<li>所使用的食品添加剂在国家标准中的通用名称；</li>
+<li>生产许可证编号；</li>
+<li>法律、法规或者食品安全标准规定必须标明的其他事项。</li>
 </ul>
+<h3 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>1.4. 食品安全风险监测和评估</h3>
+<p>国家建立食品安全风险监测制度，对食源性疾病、食品污染以及食品中的有害因素进行监测。国家建立食品安全风险评估制度，对食品、食品添加剂中生物性、化学性和物理性危害进行风险评估。</p>
+<p>对经综合分析表明可能具有较高程度安全风险的食品，国务院卫生行政部门应当及时提出食品安全风险警示，并予以公布。</p>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>2. 《中华人民共和国中医药法》</h2>
+<h3 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>2.1. 立法宗旨</h3>
+<p>继承和弘扬中医药，保障和促进中医药事业发展，保护人民健康。</p>
+<h3 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>2.2. 立法亮点</h3>
+<ol>
+<li>明确了中医药事业的重要地位和发展方针</li>
+<li>建立符合中医药特点的管理制度</li>
+<li>加大对中医药事业的扶持力度</li>
+<li>坚持扶持与规范并重，加强对中医药的监管</li>
+<li>加大对中医药违法行为的处罚力度</li>
+</ol>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -169,12 +145,12 @@ All rights reserved.</span><span class="footer-modification">
 </div>
 
 
-<a aria-label="Previous page: 第五节 健康管理服务案例" class="navigation navigation-prev" href="../15/05.html">
+<a aria-label="Previous page: 第十五章 健康管理服务营销" class="navigation navigation-prev" href="../15/index.html">
     <i class="fa fa-angle-left"></i>
 </a>
 
 
-<a aria-label="Next page: 第一节 《中华人民共和国劳动合同法》相关知识" class="navigation navigation-next" href="01.html">
+<a aria-label="Next page: 专业技能" class="navigation navigation-next" href="../../专业技能/01/index.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -187,8 +163,8 @@ All rights reserved.</span><span class="footer-modification">
             "config": {
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
-                "previous_page_link": "../15/05.html",
-                "next_page_link": "01.html"
+                "previous_page_link": "../15/index.html",
+                "next_page_link": "../../专业技能/01/index.html"
             },
             "basePath": "../../..",
             "js": {}
